--- a/DCGAN.ipynb
+++ b/DCGAN.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DCGAN.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMFRvxyUVUPZ0iE98rUy8/R",
+      "authorship_tag": "ABX9TyPy6r2PyApTo/+X6v3w5NtG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,9 @@
         "\n",
         "ReLU es una de las funciones más utilizadas: ReLU(X) = max(0,x). Tiene como problema el Dying ReLU problem por el que la red puede dejar de aprender que se resuelve con la funcion Leaky ReLU (usa generalmente un valor de 0.1).\n",
         "\n",
-        "La Sigmoide genera valores en 0 y 1. Se utiliza generalmente en los modelos de clasificación binario en la última capa para generar la probabildad de una clase.\n",
+        "La Sigmoide genera valores en 0 y 1. Se utiliza generalmente en los modelos de clasificación binario en la última capa para generar la probabildad de una clase. No se suele utilzar en  capas intermedias por los efectos del gradiente desvaneciente y los problemas de saturación.\n",
+        "\n",
+        "Una función similar es la tangente hiperbólica con valores en [-1,1].  Una diferencia con la sigmoide es que mantiene el signo de la entrada. Presenta los mismos problemas que la sigmoide para las capas intermedias.\n",
         "\n",
         "\n",
         "\n"
